--- a/client/css/app.css
+++ b/client/css/app.css
@@ -51,13 +51,17 @@
     justify-content: space-between;
     -webkit-justify-content: space-between;
 }
+.flex-align-center {
+    align-items: center;
+    -webkit-align-items:center;
+}
 .flex-full {
     flex: 1;
     -webkit-flex:1;
 }
 
 
-.app-color-primary-text--white {
+.app-color-text--white {
     color:#fff;
 }
 
@@ -69,6 +73,9 @@
     background-color: #fcfcfc !important;
 }
 
+.app-color-lightgrey {
+    background-color: #EFEFEF !important;
+}
 
 
 
@@ -88,6 +95,31 @@
 
 
 
+
+
+/*Users view*/
+.usersListView {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.usersListView li {
+    padding: 10px;
+    border-bottom: 1px solid #B3A9A9;
+}
+
+.usersListView .img-circle {
+    border-radius: 50%;
+}
+
+.usersListView .chat-body {
+    margin-left: 60px;
+}
+
+
+
+
 .fb-submit {
   background:rgba(0, 0, 0, 0.43)
 }
@@ -100,4 +132,43 @@
   padding: 15px 35px 45px;
   margin: 0 auto;
 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.emissio-chatView-main {
+    padding: 0;
+}
+.emissio-userView-main {
+    padding: 0;
+    border-left: 2px solid #ccc;
 }
